# umbral

./: .env.render.example  .gitignore  README.md  env.example  pyproject.toml  render.yaml  requirements.txt  skills-lock.json
.agents/skills/defense-in-depth/: SKILL.md
.agents/skills/root-cause-tracing/: SKILL.md  find-polluter.sh
.agents/skills/self-improving-agent-1.0.2/: SKILL.md
.agents/skills/systematic-debugging/: test-academic 3.md
.agents/skills/ux-designer/: AGENTS.md  SKILL.md
.agents/skills/verification-before-completion/: SKILL.md
.claude/skills/preserving-productive-tensions/: SKILL.md
.claude/skills/systematic-debugging/: SKILL.md  test-academic.md
.github/workflows/: render_scrape.yml  scrape.yml
sql/: add_vibe_embedding.sql  migrate_explainable_matching_architecture.sql  migrate_feedback_reasons.sql  migrate_matryoshka_dimensions.sql  migrate_scoring_v2_urban_signals.sql  migrate_to_raw_only_matching.sql  schema.sql
src/umbral/: __init__.py  config.py
src/umbral/admin/: __init__.py  learning.py
src/umbral/analysis/: __init__.py  embeddings.py  gemini_analyzer.py  listing_analyzer.py  llm_providers.py  personalized_match_analyzer.py
src/umbral/api/: __init__.py  admin.py  app.py
src/umbral/bot/: __init__.py  handlers.py  telegram_bot.py
tests/: test_admin_learning.py  test_feedback_handlers.py  test_feedback_model.py  test_import_boundaries.py  test_listing_analyzer_payload.py  test_matching_service.py  test_personalized_match_analyzer.py  test_quality_gate.py  test_scoring_engine.py  test_scraper_operation_type.py  test_semantic_calibration.py  test_urban_signals.py
(+40 files in other folders)
